# spotty

./: .gitignore  Cargo.toml
src/: main.rs
src/backend/: backend.rs
src/client/: auth.rs  client.rs  data.rs  mod.rs  streaming.rs
src/gui/: app.rs  fonts.rs  mod.rs
src/shared/: message.rs
