[package]
name = "spotty"
version = "0.1.0"
edition = "2024"

[dependencies]
librespot = "0.7.1"
rspotify = "0.15.1"
tokio = "1.47.1"
futures = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
eframe = "0.32.3"
image = "0.25.8"
hello_egui = { version = "0.9.0", features = ["material_icons", "flex"] }
egui-phosphor ={ version = "0.10.0", features = ["regular", "bold", "fill"] }
subsecond = "0.7.0-rc.0"
dioxus-devtools = "0.7.0-rc.0"
poll-promise = "0.3.0"
tarpc = "0.37.0"
flume = { version = "0.11.1", features = ["async"] }
anyhow = "1.0.100"
egui_extras = { version = "0.32.3", features = ["http", "image"] }
ehttp = "0.5.0"
